# InstaLike-Git

./: CMakeLists.txt  DisplayCamera.qml  PopUp.qml  README.md  imageprocessor.cpp  imageprocessor.h  jsonates.cpp  jsonates.h  main.cpp  main.qml  qml.qrc  qquickimageprovider.cpp  qquickimageprovider.h
Filters/: filter.cpp  filter.h  filterblur.cpp  filterblur.h  filtergrayscale.cpp  filtergrayscale.h  filteroriginal.cpp  filteroriginal.h
